--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "webpack-cli": "^4.9.2"
   },
   "devDependencies": {},
+  "engines": {
+    "node": "14.19.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch --mode=development",
+    "start": "node app.js",
     "build": "webpack --mode=production"
   },
   "repository": {
